Basic site configs

--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,14 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: frame
+
+# Search
+search:
+  path: search.xml
+  field: all
+  content: true
+  format: html
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
